--- a/latex/ej9.tex
+++ b/latex/ej9.tex
@@ -23,6 +23,7 @@ Dada la naturaleza pseudoaleatoria del \texttt{SchedLottery}, no basta una sola 
 
 El lote a analizar es el siguiente:
 
+\texttt{Lote 9}
 \begin{lstlisting}[numbers=none]
 @0:
 *5 TaskCPU 100
